# python-basics

./: pyproject.toml
Codewars/: Alpha, Upper, Lower.py  Create palindrome.py  Extract duplicates from the list.py  Factorial number.py  Fibonacci.py  File size calculator.py  Find a word.py  Find duplicate words in sentence.py  Find min & max num in string.py  Find most common letter in srting.py  Find next item in sequense.py  Find pair sum from N.py  FizzBuzz.py  Lesson 3 with Thierry autopress button.py  List comprehension examples.py  List comprehension with function.py  List where element div by index.py  Name slicing.py  Palindrome string check.py  Palindrome string loop.py  Regex remove numbers from string list.py  Remove consecutive words in string.py  Remove vowels from  string.py  Reverse method.py  Sorting by last name using lamda.py  Sum of deduct result of pairs in list.py  Sum of numbers until 10.py  Valley counter Up Down.py  count o and x.py  strip & title with lamda.py  try and except.py
Homework QA5/Lesson 2/: Task2.1..py  Task2.2.py  Task2.3.py  Task2.4.py
Homework QA5/Lesson 3 (lists, sets, tuples)/: Lesson 3 tips from Aigul.py  Task 3.2 (list).py  Task 3.3 (list to tuple).py  Task 3.4 (family size).py  Task 3.5 (dict).py  Task 3.6 (dict metods).py  Task 3.7 (list sort).py  Task 3.8 (sets).py  Task3.1.py
Homework QA5/Lesson 4 (lamda, def, kwargs)/: 4.0.from Aigul.py  4.1.  Square.py  4.2. Args & Kwargs.py  4.3. Lamda.py  Func summ of mult arrays.py  Sum only positive in list.py  my_calc.py
Pytest_lessons/: practice_2.odp
(+2 files in other folders)
