[tool.poetry]
name = "poetry-qa"
version = "0.1.0"
description = ""
authors = ["Sergey Li <li.sergey@yahoo.com>"]
readme = "README.md"
packages = [{include = "poetry_qa"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
webdriver-manager = "^3.8.3"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
